# src/main/kotlin/com/wutsi/marketplace/manager/dto/Store.kt
@@ -17,6 +17,6 @@ public data class Store(
     @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
     public val updated: OffsetDateTime = OffsetDateTime.now(),
     @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
-    public val suspended: OffsetDateTime? = null,
+    public val deactivated: OffsetDateTime? = null,
     public val status: String = ""
 )
